# rs_quant

./: .gitignore  Cargo.toml  README.md  lib-breakdown.md  readme.md  statistics.md
.github/workflows/: auto-merge.yml  rust.yml
.sqlx/: query-c5a8ae27045e98b26d0d2a4d746b4bbe4b1a82660bbeb3e079ce74f480c3f9a9.json
src/: lib.rs  yf_client.rs  yf_const.rs  yf_error.rs
src/commons/: date.rs  mod.rs  parser.rs  utils.rs
src/data/: error.rs  mod.rs  options.rs  provider.rs  quotes.rs  search_res.rs  yahoo.rs
src/data/ml_models/: mod.rs
src/data/ml_models/portfolio_models/: mod.rs
src/data/ml_models/single_asset_models/: mod.rs
src/database/: connection.rs  queries.rs
src/fin_numerical/math/: mod.rs  returns.rs
src/portfolio/: mod.rs  portfolio.rs  position.rs
src/quantitative/: error.rs  matrix.rs  mod.rs  returns.rs  rootfinding.rs  sequence.rs  statistics.rs  traits.rs  utils.rs
src/quantitative/math/: matrices.rs  mod.rs  regression.rs  statistics.rs
src/quantitative/statistics/: descriptive.rs  greeks.rs  matrix.rs  mod.rs
src/utils/: common.rs  mod.rs  parsers.rs
tests/: data_entry.rs  data_test.rs  entry.rs  fin_numerical_entry.rs  parser_test.rs  parsers_test.rs  provider_test.rs  quantitative_entry.rs  quotes_test.rs
tests/commons/: date.rs
tests/data/: yahoo.rs
tests/data_test/: mod.rs  options_test.rs  quotes_test.rs
tests/database/: connection.rs  queries.rs
tests/fin_numerical_test/: mod.rs  returns_test.rs
tests/portfolio/: portfolio.rs  position.rs
tests/quantitative/: matrix.rs  mod.rs  returns.rs  rootfinding.rs  sequence.rs  statistics.rs
tests/quantitative_test/: matrices.rs  mod.rs  regression.rs  returns_test.rs  statistics.rs  statistics_test.rs
