[package]
name = "rs-quant"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
noisy_float = "0.2.0"
num = "0.4.3"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
statrs = "0.18.0"
thiserror = "2.0.11"
time = { version = "0.3.37", features = [
    "macros",
    "parsing",
    "formatting",
    "local-offset",
] }
tokio = { version = "1.43.0", features = ["full"] }
yahoofinance = { package = "yahoo_finance_api", git = "https://github.com/mattmingit/yahoo_finance_api.git", branch = "master" }
