[package]
name = "rs-quant"
version = "0.1.0"
edition = "2021"
authors = ["Matteo Montanari"]
description = "rs-quant is a rust library designed for quantitative finance enthusiasts. It provides a set of models, formulas, and tools to perform financial analysis for multiple financial instruments"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
noisy_float = "0.2.0"
num = "0.4.3"
reqwest = "0.12.12"
roots = "0.0.8"
rust_decimal = { version = "1.36.0", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = [
    "mysql",
    "runtime-tokio-rustls",
    "chrono",
    "rust_decimal",
] }
statrs = "0.18.0"
thiserror = "2.0.11"
time = { version = "0.3.37", features = [
    "macros",
    "parsing",
    "formatting",
    "local-offset",
] }
tokio = { version = "1.43.0", features = ["full"] }
yahoofinance = { package = "yahoo_finance_api", git = "https://github.com/mattmingit/yahoo_finance_api.git", branch = "master" }

[package.metadata.sqlx]
offline = true
